--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,9 +38,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  firebase_core: ^2.8.0
-  firebase_database: ^10.0.16
-  firebase_auth: ^4.3.0
+  font_awesome_flutter: ^10.4.0
+  sizer: ^2.0.15
 
 dev_dependencies:
   flutter_test:
